formulaire décalé vers le bas + liste déroulante catégorie

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -52,6 +52,7 @@ en:
               too_long: "Le titre ne peut pas dépasser %{count} caractères."
             category:
               blank: "La catégorie est obligatoire."
+              inclusion: "La catégorie est manquante."
         communication:
           attributes:
             title:
